fix maltweaks dialog z-index

--- a/css/init.css
+++ b/css/init.css
@@ -12,18 +12,7 @@
     font-size: 80%;
 }
 
-.berrytweaks-dialog {
-    z-index: 2000;
+.berrytweaks-dialog,
+.dialogWindow {
+    z-index: 10001 !important;
 }
-
-/*
-#chatControls > .settings[style] {
-    background-position: 0 50% !important;
-    background-repeat: no-repeat !important;
-    background-image: url('https://dl.atte.fi/famfamfam/chart_bar.png') !important;
-}
-
-#chatControls > .settings[style] + .settings[style] {
-    background-image: url('https://dl.atte.fi/famfamfam/table.png') !important;
-}
-*/
